--- a/public/newTutor/fill-details.html
+++ b/public/newTutor/fill-details.html
@@ -114,7 +114,7 @@
                 </div>
             </div>
 
-            <div ng-show="step==4"><span>HelpDU experts are looking into your profile.You will be notified via email when approved.</span></div>
+            <div ng-show="step>3"><span>HelpDU experts are looking into your profile.You will be notified via email when approved.</span></div>
 
     </section>
 
