--- a/public/authentication-error.html
+++ b/public/authentication-error.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="javascripts/lib/angular-Material-Preloader.min.js"></script>
     <script type="text/javascript" src="javascripts/directives/directives.js"></script>
     <script type="text/javascript" src="javascripts/services/services.js"></script>
+    <script type="text/javascript" src="javascripts/filters/filters.js"></script>
     <script type="text/javascript" src="javascripts/directives/focus-directive.js"></script>
     <script type="text/javascript" src="javascripts/index-app.js"></script>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
