--- a/public/search.html
+++ b/public/search.html
@@ -3,20 +3,20 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>HelpDU</title>
-    <script type="text/javascript" src="../javascripts/lib/angular.min.js"></script>
+    <script type="text/javascript" src="javascripts/lib/angular.min.js"></script>
     <!--<script type="text/javascript" src="javascripts/lib/angular-facebook.js"></script>-->
-    <script src="../javascripts/lib/angular-file-upload-shim.min.js"></script>
-    <script src="../javascripts/lib/angular-file-upload.min.js"></script>
-    <script type="text/javascript" src="../javascripts/lib/angular-Material-Preloader.min.js"></script>
-    <script type="text/javascript" src="../javascripts/directives/directives.js"></script>
-    <script type="text/javascript" src="../javascripts/services/services.js"></script>
-    <script type="text/javascript" src="../javascripts/directives/focus-directive.js"></script>
-    <script type="text/javascript" src="../javascripts/index-app.js"></script>
+    <script src="javascripts/lib/angular-file-upload-shim.min.js"></script>
+    <script src="javascripts/lib/angular-file-upload.min.js"></script>
+    <script type="text/javascript" src="javascripts/lib/angular-Material-Preloader.min.js"></script>
+    <script type="text/javascript" src="javascripts/directives/directives.js"></script>
+    <script type="text/javascript" src="javascripts/services/services.js"></script>
+    <script type="text/javascript" src="javascripts/directives/focus-directive.js"></script>
+    <script type="text/javascript" src="javascripts/index-app.js"></script>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-    <link href="../stylesheets/materialPreloader.min.css" rel="stylesheet prefetch">
-    <link rel="stylesheet" type="text/css" href="../stylesheets/css-reset.css"/>
-    <link rel="stylesheet" type="text/css" href="../stylesheets/style.css"/>
-    <link rel="stylesheet" type="text/css" href="../stylesheets/search-style.css"/>
+    <link href="stylesheets/materialPreloader.min.css" rel="stylesheet prefetch">
+    <link rel="stylesheet" type="text/css" href="stylesheets/css-reset.css"/>
+    <link rel="stylesheet" type="text/css" href="stylesheets/style.css"/>
+    <link rel="stylesheet" type="text/css" href="stylesheets/search-style.css"/>
 
 </head>
 <body ng-controller="MenuCtrl">
@@ -67,8 +67,8 @@
     <div class="searchResultsWrapper">
         <div class="searchResults">
                 <div class="imageContainer"><div class="tutorImage" id="tutor1"></div></div>
-            <div class="tutorInfo"><h1 class="tutorName">Aheli C</h1><div class="tutorCollege"></div>
-                <div class="tutorDescription">"...Even before I got to college, in high school I loved to tutor. I worked with students..."</div>
+            <div class="tutorInfo"><h1 class="tutorName">Aheli C</h1><div class="tutorCollege"><span>Birla Institute of Technology and Science </span></div>
+                <div class="tutorDescription"><span>Chemistry-</span><span>2017</span></div>
                 <div class="contactTutor"><div class="message"></div><div class="requestLesson"></div></div>
             </div>
         </div>
