--- a/public/tutor-profile.html
+++ b/public/tutor-profile.html
@@ -7,13 +7,18 @@
     <!--<script type="text/javascript" src="javascripts/lib/angular-facebook.js"></script>-->
     <script src="javascripts/lib/angular-file-upload-shim.min.js"></script>
     <script src="javascripts/lib/angular-file-upload.min.js"></script>
+    <script type="text/javascript" src="javascripts/lib/angular-Material-Preloader.min.js"></script>
     <script type="text/javascript" src="javascripts/directives/directives.js"></script>
     <script type="text/javascript" src="javascripts/services/services.js"></script>
+    <script type="text/javascript" src="javascripts/directives/focus-directive.js"></script>
     <script type="text/javascript" src="javascripts/index-app.js"></script>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link href="stylesheets/materialPreloader.min.css" rel="stylesheet prefetch">
     <link rel="stylesheet" type="text/css" href="stylesheets/css-reset.css"/>
     <link rel="stylesheet" type="text/css" href="stylesheets/style.css"/>
     <link rel="stylesheet" type="text/css" href="stylesheets/tutor-public-profile-style.css"/>
+    <script type="text/javascript" src="javascripts/lib/custombox.js"></script>
+    <link rel="stylesheet" type="text/css" href="stylesheets/custombox.css"/>
 </head>
 <body ng-controller="MenuCtrl">
 <aside   stop-event ng-class="{asideOpen:menuOpened,asideClose:!menueOpened,clicked:clicked,notClicked:!clicked}" >
@@ -57,11 +62,7 @@
             <a href="register.html"><div>Sign Up</div></a>
                 </div>
             <div class="headerNavListContainer">
-                <ul class="headerNavList">
-                    <li class="navNotif"></li>
-                    <li class="navMessage"></li>
-                    <li class="navLogout"></li>
-                </ul>
+
             </div>
         </div>
 
@@ -71,33 +72,70 @@
 
 
     <section>
-            <div id="tutorPublicProfileContainer">
+
+        <div ng-controller="RequestLessonCtrl" id="requestLessonFormWrapper" class="formWrapper modal">
+        <div class="headingBar"><div class="headingBarIcon"></div><h1>Request Private Lesson</h1>
+        </div>
+        <form name="reqLessonForm"  ng-submit="submitData()" novalidate>
+            <select ng-model="subject" required>
+                <option value="" default selected>select subject</option>
+                <option ng-repeat="subject in subjectList">{{subject.subjectName}}</option>
+            </select><br/>
+            <textarea ng-model="message" required></textarea><br/>
+            <div id="upload" ng-controller="FileCtrl"><span>Attach File(s)</span>
+                <input type="file" ng-file-select="onFileSelect($files)" multiple>
+            </div> <br/>
+            <input type="number" id="deadline"  placeholder="Deadline" name="input" ng-model="deadline" min="1" max="72" step="1"  required>
+            <input type="number" placeholder="No. of Hours" ng-model="hours" min="1" step="1" required/><br/>
+            <select ng-model="mode" required>
+                <option value="" default selected>select mode</option>
+                <option selected="selected" value="true">private</option>
+            </select><br/>
+            <div class="buttonContainer"><button type="submit" ng-disabled="reqLessonForm.$invalid">Request Private Lesson</button></div><br/>
+        </form>
+    </div>
+
+        <div id="tutorPublicProfileContainer" ng-controller="TutorProfileCtrl">
                 <div class="profileHeader">
                     <div class="imageContainer"><div class="profileImage"></div></div>
                     <div class="basicDetails">
-                        <div class="tutorName"><span>Saumya Sharma</span></div>
-                        <div class="tutorCollege"><span>Birla Institute of Technology & Science</span></div>
-                        <div class="tutorMajor"><span>Major: Mathematics</span></div>
+                        <div class="tutorName"><span>{{tutor.name}}</span></div>
+                        <div class="tutorCollege"><span>{{tutor.instituteName}}</span></div>
+                        <div class="tutorMajor"><span>Major:{{tutor.major}},Class of {{tutor.yearOfGrad}}</span></div>
                     </div>
                     <div class="statsContainer">
                         <div class="stats likedBy"><span>Liked by <span class="statNumber">60</span> Students</span></div>
-                        <div class="stats reply"><span>Likelihood of reply <span class="statNumber">90</span>Percent</span></div>
-                        <div class="stats responseTime"><span>Response time <span class="statNumber"><5</span>Minutes</span></div>
+                        <div id="element" class="stats requestPrivateLesson"><span>Request Private<sapn class="statNumber"></sapn>Lesson</span></div>
+                        <div class="stats message"><span>Message <sapn class="statNumber"></sapn>Tutor</span></div>
+                        <!--<div class="stats reply"><span>Likelihood of reply <span class="statNumber">90</span>Percent</span></div>
+                        <div class="stats responseTime"><span>Response time <span class="statNumber"><5</span>Minutes</span></div>-->
                     </div>
                 </div>
                 <div class="profileDetails">
                     <div class="profileNavigation">
                         <ul>
-                            <li>Overview</li>
-                            <li>Reviews</li>
+                            <li ng-click="review=false">Overview</li>
+                            <li ng-click="review=true">Reviews</li>
                         </ul>
                     </div>
-                    <div class="displayDetails">
+                    <div class="displayDetails" ng-show="!review">
                         <article><h2>Teaching Experience</h2>
-                        <p>After my college graduation, I worked under an non government organisation where I was involved in teaching 10th-12th school students, especially children belonging to financially weak backgrounds who are unable to afford tutors outside school.<br>I also worked as lecturer in my college.</p>
+                        <p>{{tutor.teachingExp}}</p>
                         </article><article><h2 id="tut-interests" class="tutor-headline">Extracurricular Interests</h2>
-                        <p>I am a native of Delhi, capital of India. Born and raised there, I had my elementary education in Delhi public school and moved to Manipal for graduation. <br>I like to read and act. I dream of making it big in Bollywood and wish to finance my dream through  this field.</p>
-                    </article></div>
+                        <p>{{tutor.extracurrInterests}}</p>
+                    </article>
+                    </div>
+                    <div class="displayDetails" ng-show="review">
+                        <article><h2>Reviews</h2>
+                        <table class="reviewTable">
+                            <tr>
+                                <th>Subject</th>
+                                <th>Feedback</th>
+                                <th>Vote</th>
+                            </tr>
+                        </table>
+                        </article>
+                    </div>
                     <div class="tutoredSubjects">
                         <h2>Subjects Tutored</h2>
                         <span class="subjects">Subject1</span><span class="subjects">Subject2</span><span class="subjects">Subject3</span>
@@ -129,6 +167,19 @@
         </div>
     </footer>
 </div>
+
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        document.getElementById('element').addEventListener('click', function ( e ) {
+            Custombox.open({
+                target: '.modal',
+                effect: 'fadein',
+                width:'846'
+            });
+            e.preventDefault();
+        });
+    });
+</script>     
 
 </body>
 </html>
